--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,9 @@ version: 0.2
 phases:
   install:
     commands:
-      - yum install jq  # Install jq for JSON processing
+      # - yum install jq  # Install jq for JSON processing
+      # jp seems to be already installed
+      - echo "phase: install"
 
   pre_build:
     # Logic for including templates would be implemented here
@@ -18,10 +20,12 @@ phases:
       # Trigger the entire project job (replace with actual commands)
       - echo "Trigger project trace job. Can we use conditionals?"
       - git clone https://github.com/Usetrace/universal-integration.git
+      - npm install --prefix universal-integration
       - ls
       - export INPUT_TRACE_ID=ZuBrNuWNsQAXLYUzSDO9O9Gx9SguaVsr
       - npm run trace --prefix universal-integration
-      # Process single trace artifact as we did with gitlab
+      - ls
+      # Process single trace artifact
       - |
         cat output.json | jq '.status'
         cat output.json
@@ -30,9 +34,11 @@ phases:
       - |
         cat output.json | jq '.report.failures'
         if [ $(jq '.report.failures | length' output.json) -eq 0 ]; then
-          exit 0
+          echo "MOCK: exit 0"
+          # exit 0
         else
-          exit 1
+          echo "MOCK: exit 1"
+         # exit 1
         fi
 
   post_build:
